// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reference data selectors findCourCentres should return the court centres for the given ou-codes 1`] = `
[
  {
    "courtrooms": [],
    "id": "id",
    "oucode": "oucode",
    "oucodeL3Name": "oucodeL3Name",
  },
]
`;

exports[`Reference data selectors getCourtCentres should return the court centres 1`] = `
[
  {
    "courtrooms": [],
    "id": "id",
    "name": "oucodeL3Name",
    "oucode": "oucode",
    "oucodeL1Code": "B",
  },
]
`;
